GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/BSP_Refund_Application__c.object-meta.xml
<CustomObject>
    <label>BSP Refund Application</label>
    <nameField>
        <displayFormat>BSP_RA-{0000}</displayFormat>
        <label>BSP Refund Application Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSP Refund Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>