GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/fields/BSP_Refund_Number__c.field-meta.xml
<CustomField>
    <fullName>BSP_Refund_Number__c</fullName>
    <inlineHelpText>This is the Refund Number as found on BSP.</inlineHelpText>
    <label>BSP Refund Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>