GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/fields/GDS_TCN_RA__c.field-meta.xml
<CustomField>
    <fullName>GDS_TCN_RA__c</fullName>
    <label>GDS Ticket Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>