GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/fields/Locator_Reference__c.field-meta.xml
<CustomField>
    <fullName>Locator_Reference__c</fullName>
    <label>Locator Reference</label>
    <length>32</length>
    <type>Text</type>
</CustomField>