GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/fields/PNR_RA__c.field-meta.xml
<CustomField>
    <fullName>PNR_RA__c</fullName>
    <label>PNR</label>
    <length>32</length>
    <type>Text</type>
</CustomField>