GearsetPOC/force-app/main/default/objects/BSP_Refund_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GDS_TCN_RA__c</columns>
    <columns>Locator_Reference__c</columns>
    <columns>PNR_RA__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>